src/content_scripts/ui/frontend.css
.sk_theme {
    background: #1e1e1e;
    color: #d4d4d4;
}
.sk_theme input {
    color: #d4d4d4;
    background: #2d2d2d;
}
.sk_theme .url {
    color: #b0b0b0;
}
.sk_theme .annotation {
    color: #b0b0b0;
}
.sk_theme kbd {
    background: #2d2d2d;
    color: #e8e8e8;
    border: 1px solid #555;
}
.sk_theme .frame {
    background: rgba(129, 120, 222, 0.62);
}
.sk_theme .omnibar_highlight {
    color: #ff6b6b;
}
.sk_theme .omnibar_folder {
    color: #8b9cff;
}
.sk_theme .omnibar_timestamp {
    color: #ff88cc;
}
.sk_theme .omnibar_visitcount {
    color: #5e8eff;
}
.sk_theme .prompt, .sk_theme .resultPage {
    color: #888;
}
.sk_theme .feature_name {
    color: #f59e42;
}
.sk_theme .separator {
    color: #d4d420;
}

body {
    margin: 0;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 12px;
}
#sk_omnibar {
    overflow: hidden;
    position: fixed;
    width: 80%;
    max-height: 100vh;
    left: 10%;
    text-align: left;
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
    z-index: 2147483000;
}
.sk_omnibar_middle {
    top: 10%;
    border-radius: 4px;
}
.sk_omnibar_bottom {
    bottom: 0;
    border-radius: 4px 4px 0px 0px;
}
#sk_omnibar span.omnibar_highlight {
    text-shadow: 0 0 0.01em;
}
#sk_omnibarSearchArea .prompt, #sk_omnibarSearchArea .resultPage {
    display: inline-block;
    font-size: 20px;
    width: auto;
}
#sk_omnibarSearchArea>input {
    display: inline-block;
    width: 100%;
    flex: 1;
    font-size: 20px;
    margin-bottom: 0;
    padding: 0px 0px 0px 0.5rem;
    background: transparent;
    border-style: none;
    outline: none;
}
#sk_omnibarSearchArea {
    display: flex;
    align-items: center;
    border-bottom: 1px solid #999;
}
.sk_omnibar_middle #sk_omnibarSearchArea {
    margin: 0.5rem 1rem;
}
.sk_omnibar_bottom #sk_omnibarSearchArea {
    margin: 0.2rem 1rem;
}
.sk_omnibar_middle #sk_omnibarSearchResult>ul {
    margin-top: 0;
}
.sk_omnibar_bottom #sk_omnibarSearchResult>ul {
    margin-bottom: 0;
}
#sk_omnibarSearchResult {
    max-height: 60vh;
    overflow: hidden;
    margin: 0rem 0.6rem;
}
#sk_omnibarSearchResult.llmChat {
    overflow: auto;
    max-height: 90vh;
    scrollbar-width: thin;
}
#sk_omnibarSearchResult:empty {
    display: none;
}
#sk_omnibarSearchResult.llmChat>h4 {
    background-color: #1b541d;
    border-radius: 4px;
    padding: 4px;
    position: absolute;
    right: 30px;
}
#sk_omnibarSearchResult>ul {
    padding: 0;
}
#sk_omnibarSearchResult>ul>li {
    padding: 0.2rem 0rem;
    display: flex;
    align-items: center;
    max-height: 600px;
    overflow-x: hidden;
    overflow-y: auto;
}
#sk_omnibarSearchResult.llmChat>ul>li {
    max-height: max-content;
}
#sk_omnibarSearchResult.llmChat>ul>li:before {
    font-size: 20px;
    padding: 5px;
}
#sk_omnibarSearchResult.llmChat>ul>li.role-user:before {
    content: var(--llm-user-icon, '🐝');
}
#sk_omnibarSearchResult.llmChat>ul>li.role-assistant:before {
    content: var(--llm-assistant-icon, '👩‍🎓');
}
#sk_omnibarSearchResult.llmChat>ul>li.role-surfingkeys:before {
    content: var(--llm-assistant-icon, 'ℹ︎');
}
.sk_theme #sk_omnibarSearchResult>ul>li:nth-child(odd) {
    background: #fafafa;
}
.sk_theme #sk_omnibarSearchResult>ul>li.focused {
    background: #cddef9;
}
.sk_theme #sk_omnibarSearchResult>ul>li.window {
    border: 2px solid #c7c7c773;
    border-radius: 8px;
    margin: 4px 0px;
}
.sk_theme #sk_omnibarSearchResult>ul>li.window.focused {
    border: 2px solid #fff;
}
.sk_theme div.table {
    display: table;
}
.sk_theme div.table>* {
    vertical-align: middle;
    display: table-cell;
}
#sk_omnibarSearchResult li .icon {
    margin-right: 0.5rem;
    width: 16px;
}
#sk_omnibarSearchResult li div.title {
    text-align: left;
}
#sk_omnibarSearchResult li div.url {
    font-weight: bold;
    white-space: nowrap;
}
#sk_omnibarSearchResult li.focused div.url {
    white-space: normal;
}
#sk_omnibarSearchResult li span.annotation {
    float: right;
}
#sk_omnibarSearchResult .tab_in_window {
    display: inline-block;
    padding: 5px;
    margin: 5px;
    box-shadow: 0px 2px 10px rgb(0 0 0 / 88%);
}
#sk_omnibarSearchResult.commands>ul>li {
    justify-content: space-between;
}
#sk_status {
    position: fixed;
    bottom: 0;
    right: 20%;
    z-index: 2147483000;
    padding: 12px 16px 8px 16px;
    border-radius: 4px 4px 0px 0px;
    border: 1px solid #777;
    font-size: 18px;
}
#sk_status>span {
    line-height: 24px;
}
.expandRichHints span.annotation {
    padding-left: 12px;
    color: #e0e0e0;
    font-size: 20px;
    font-weight: 500;
    min-width: 280px;
}
.expandRichHints .kbd-span {
    min-width: 80px;
    text-align: right;
    display: inline-block;
}
.expandRichHints kbd>.candidates {
    color: #de0606;
    font-weight: bold;
}
.expandRichHints kbd {
    padding: 6px 10px;
    font-size: 15px;
    background: #2a2a2a;
    color: #4ae54a;
    border: 1px solid #444;
    border-radius: 4px;
    font-weight: bold;
}
#sk_find {
    border-style: none;
    outline: none;
}
#sk_keystroke {
    padding: 12px 8px;
    position: fixed;
    float: right;
    bottom: 0px;
    z-index: 2147483000;
    right: 0px;
    background: #1a1a1a;
    color: #fff;
    font-size: 16px;
    border-radius: 8px;
    max-width: 600px;
}
#sk_keystroke > div {
    padding: 12px 16px;
    margin-bottom: 8px;
    border-bottom: 1px solid #333;
    display: flex;
    gap: 16px;
    align-items: center;
}
#sk_keystroke > div:last-child {
    border-bottom: none;
}
#sk_usage, #sk_popup, #sk_editor {
    overflow: auto;
    position: fixed;
    width: 80%;
    max-height: 80%;
    top: 10%;
    left: 10%;
    text-align: left;
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
    z-index: 2147483298;
    padding: 1rem;
}
#sk_nvim {
    position: fixed;
    top: 10%;
    left: 10%;
    width: 80%;
    height: 30%;
}
#sk_popup img {
    width: 100%;
}
#sk_usage>div {
    display: inline-block;
    vertical-align: top;
}
#sk_usage .kbd-span {
    width: 80px;
    text-align: right;
    display: inline-block;
}
#sk_usage .feature_name {
    text-align: center;
    padding-bottom: 4px;
}
#sk_usage .feature_name>span {
    border-bottom: 2px solid #888;
}
#sk_usage span.annotation {
    padding-left: 32px;
    line-height: 22px;
}
#sk_usage * {
    font-size: 10pt;
}
kbd {
    white-space: nowrap;
    display: inline-block;
    padding: 3px 5px;
    font: 11px Consolas, "Liberation Mono", Menlo, Courier, monospace;
    line-height: 10px;
    vertical-align: middle;
    border: solid 1px #ccc;
    border-bottom-color: #bbb;
    border-radius: 3px;
    box-shadow: inset 0 -1px 0 #bbb;
}
#sk_banner {
    padding: 0.5rem;
    position: fixed;
    left: 10%;
    top: -3rem;
    z-index: 2147483000;
    width: 80%;
    border-radius: 0px 0px 4px 4px;
    border: 1px solid #ffc356;
    border-top-style: none;
    text-align: center;
    background: rgb(255, 233, 182);
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}
#sk_tabs {
    position: fixed;
    top: 0;
    left: 0;
    background: #00000085;
    overflow: auto;
    z-index: 2147483000;
}
#sk_tabs.horizontal {
    width: 100%;
}
#sk_tabs.horizontal div.sk_tab {
    display: inline-grid;
}
#sk_tabs.horizontal div.sk_tab_hint {
    float:right;
}
#sk_tabs.vertical div.sk_tab_title {
    min-width: 100pt;
    max-width: 60vw;
}
#sk_tabs.vertical div.sk_tab_hint {
    position: fixed;
    left: 80pt;
}
div.tab_rocket {
    margin: 6px;
    display: inline-block;
    padding: 0px 2px 0px 2px;
    opacity: 0;
}
#sk_tabs.inline div.sk_tab {
    display: inline-block;
}
div.tab_rocket {
    margin: 6px;
    display: inline-block;
    padding: 0px 2px 0px 2px;
    opacity: 0;
}
div.sk_tab {
    vertical-align: bottom;
    justify-items: center;
    border-radius: 3px;
    margin: 1px;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#DAE6F5), color-stop(100%,#B0CCEF));
    box-shadow: 0px 3px 7px 0px rgba(245, 245, 0, 0.3);
    padding-top: 2px;
    border-top: solid 1px black;
}
div.sk_tab_wrap {
    display: inline-block;
}
div.sk_tab_icon {
    display: inline-block;
    padding-left: 1px;
    vertical-align: middle;
}
div.sk_tab_icon>img {
    width: 18px;
}
div.sk_tab_title {
    display: inline-block;
    vertical-align: middle;
    font-size: 10pt;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    padding-left: 5px;
    color: #000;
}
div.sk_tab_url {
    font-size: 10pt;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    color: #333;
}
div.sk_tab_hint {
    display: inline-block;
    font-size: 10pt;
    font-weight: bold;
    padding: 0px 2px 0px 2px;
    margin: 6px;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFF785), color-stop(100%,#FFC542));
    color: #000;
    border: solid 1px #C38A22;
    border-radius: 3px;
    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.3);
}
div.sk_tab_group {
    font-size: large;
    color: #e1e1e1;
    padding: 4px;
    border: 1px solid #ccc;
    border-radius: 6px;
    margin: 10px;
    display: inline-block;
    background: #000;
}
div.sk_tab_group_header {
    display: flex;
    justify-content: space-between;
}
div.sk_tab_group_header>div {
    display: inline-flex;
}
#sk_bubble {
    position: absolute;
    padding: 9px;
    border: 1px solid #999;
    border-radius: 4px;
    box-shadow: 0 0 20px rgba(0,0,0,0.5);
    color: #222;
    background-color: #ffd;
    z-index: 2147483000;
    font-size: 14px;
}
#sk_bubble .sk_bubble_content {
    overflow-y: scroll;
    background-size: 3px 100%;
    background-position: 100%;
    background-repeat: no-repeat;
}
.sk_scroller_indicator_top {
    background-image: linear-gradient(rgb(0, 0, 0), transparent);
}
.sk_scroller_indicator_middle {
    background-image: linear-gradient(transparent, rgb(0, 0, 0), transparent);
}
.sk_scroller_indicator_bottom {
    background-image: linear-gradient(transparent, rgb(0, 0, 0));
}
#sk_bubble * {
    color: #000 !important;
}
div.sk_arrow>div:nth-of-type(1) {
    left: 0;
    position: absolute;
    width: 0;
    border-left: 12px solid transparent;
    border-right: 12px solid transparent;
    background: transparent;
}
div.sk_arrow[dir=down]>div:nth-of-type(1) {
    border-top: 12px solid #999;
}
div.sk_arrow[dir=up]>div:nth-of-type(1) {
    border-bottom: 12px solid #999;
}
div.sk_arrow>div:nth-of-type(2) {
    left: 2px;
    position: absolute;
    width: 0;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    background: transparent;
}
div.sk_arrow[dir=down]>div:nth-of-type(2) {
    border-top: 10px solid #ffd;
}
div.sk_arrow[dir=up]>div:nth-of-type(2) {
    top: 2px;
    border-bottom: 10px solid #ffd;
}
.ace_editor.ace_autocomplete {
    z-index: 2147483300 !important;
    width: 80% !important;
}
@media only screen and (max-width: 767px) {
    #sk_omnibar {
        width: 100%;
        left: 0;
    }
    #sk_omnibarSearchResult {
        max-height: 50vh;
        overflow: scroll;
    }
    .sk_omnibar_bottom #sk_omnibarSearchArea {
        margin: 0;
        padding: 0.2rem;
    }
}

